--- a/TITTYFUCK.ipynb
+++ b/TITTYFUCK.ipynb
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,8 +334,11 @@
     "import numpy as np\n",
     "import json\n",
     "import requests\n",
-    "njhour = json.loads(requests.get('https://api.openweathermap.org/data/2.5/onecall?lat=32.0617&lon=118.7778&appid=de27c6f96edbbf0e14301a9b019257c7').text)\n",
-    "with open('09-29.json', 'w') as f:\n",
+    "with open('api', 'r') as r:\n",
+    "    api = r.read()\n",
+    "# print(api)\n",
+    "njhour = json.loads(requests.get('https://api.openweathermap.org/data/2.5/onecall?lat=32.0617&lon=118.7778&appid={}'.format(api)).text)\n",
+    "with open('10-21.json', 'w') as f:\n",
     "    json.dump(njhour, f)"
    ]
   }
