--- a/TITTYFK.ipynb
+++ b/TITTYFK.ipynb
@@ -325,12 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import datetime\n",
+    "import time\n",
     "import numpy as np\n",
     "import json\n",
     "import requests\n",
@@ -338,8 +339,53 @@
     "    api = r.read()\n",
     "# print(api)\n",
     "njhour = json.loads(requests.get('https://api.openweathermap.org/data/2.5/onecall?lat=32.0617&lon=118.7778&appid={}'.format(api)).text)\n",
-    "with open('10-21.json', 'w') as f:\n",
-    "    json.dump(njhour, f)"
+    "with open('12-10.json', 'w') as f:\n",
+    "    json.dump(njhour, f)\n",
+    "def countdown(t):\n",
+    "    while t:\n",
+    "        mins, secs = divmod(t, 60)\n",
+    "        timer = '{:02d}:{:02d}'.format(mins, secs)\n",
+    "        print(timer, end=\"\\r\")\n",
+    "        time.sleep(1)\n",
+    "        t -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'C:\\Program' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Administrator\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "# import selenium\n",
+    "print(os.path.expanduser('~'))"
    ]
   }
  ],
